signin/signup pages

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,11 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="orange">#FD5A3E</color>
+    <color name="dark_blue">#9ACED1</color>
+    <color name="pink">#FAB2A7</color>
+    <color name="very_light_blue">#F8FDFE</color>
+    <color name="light_blue">#B1D8D8</color>
+    <color name="text_color">#174244</color>
+    <color name="editText_color">#E5E5E5</color>
 </resources>
