--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -5,5 +5,25 @@
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
-    <style name="Theme.CargoFit" parent="Base.Theme.CargoFit" />
+    <style name="Theme.CargoFit" parent="Base.Theme.CargoFit">
+        <item name="android:fontFamily">@font/khand_regular</item>
+
+        <!-- Turn off Material 3 button tinting -->
+        <item name="colorPrimary">@android:color/transparent</item>
+        <item name="colorSecondary">@android:color/transparent</item>
+        <item name="colorPrimaryContainer">@android:color/transparent</item>
+
+        <!-- Disable default Material shape tint -->
+        <item name="android:colorButtonNormal">@android:color/transparent</item>
+
+        <!-- Force using your background only -->
+        <item name="materialButtonStyle">@style/MyButtonStyle</item>
+    </style>
+
+    <!-- Custom style to let your background appear -->
+    <style name="MyButtonStyle" parent="Widget.Material3.Button">
+        <item name="android:background">@null</item>
+        <item name="backgroundTint">@null</item>
+    </style>
+
 </resources>
